--- a/locale/zh.txt
+++ b/locale/zh.txt
@@ -34,7 +34,7 @@ CG鉴赏
 最难
 星
 难度分类:%s\n难度星级:%d星\n\n  最高分:%.7d\n最高连击:%.4d\n最高评价:%s\n通关次数:%d
-（全屏）
+全屏
 重试
 返回
 恢复默认设置
@@ -134,3 +134,6 @@ AVI 分辨率：\n1～3：1024×576\n4～6：640×360\n7～9：480×270
 按键习惯：
 初音播放器
 播放音频、视频\n可以变速、变调\n初音音乐视觉化效果
+是
+否
+\n\n\n全屏模式
